--- a/sass/_messages.scss
+++ b/sass/_messages.scss
@@ -16,16 +16,15 @@
 	-ms-transition: all $transition-duration ease-out;
 	-o-transition: all $transition-duration ease-out;
 	transition: all $transition-duration ease-out;
-
 }
 
 input[type='text'].input-light{
-	border:1px solid transparent;
+	border:2px solid rgba(30,30,30,.1);
 	border-bottom:2px solid rgba(30,30,30,.1);
 	box-shadow:none;
 	
 	&:focus{
-		border:1px solid transparent;
-		border-bottom:1px solid rgba(30,30,30,.04);
+		border:2px solid rgba(30,30,30,.04);
+		border-bottom:2px solid rgba(30,30,30,.04);
 	}
 }
