--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,22 +5,63 @@ header{
 		text-align: center;
 	}
 
-	input.user{
-		margin-top: .1em;
-		max-width:8em;
+	#login-buttons{
+		display: inline-block;
+		position:relative;
+		border-radius:5px;
+		border:1px solid rgb(230,230,230);
+		box-shadow: 6px 6px 7px rgb(218,218,218);
 	}
+		.login-link-and-dropdown-list{
+			position: relative;
+			padding:.5em;
+			background:rgb(240,240,240);
+		}
+		#login-dropdown-list{
+			position: absolute;
+			top: -1px;
+			left: -1px;
+			right: -100px;
+			padding: .5em;
+			background: rgb(240,240,240);
+			border-radius: 5px;
+			border:1px solid rgb(230,230,230);
+			box-shadow: 6px 6px 7px rgb(218,218,218);
+			
+			/*
+				center text like 'Sign in with Github'
+			*/
+			.login-text-and-button{
+				text-align: center;
+			}
+			span{
+				margin-top:7px;
+				display: inline-block;
+				cursor:pointer;
+
+				&:hover{
+					color:#737373;
+				}
+			}
+		}
+
 	.user{
 		font-size: .8em;
 		margin: 1.4em 0 0 1em;
 		display: inline-block;
 	}
 
+	.or{
+		margin: auto 1em;
+	}	
+
+	#logout{
+		margin: .6em 1em 0;
+	}
+	
 	#roomID{
 		max-width: 7em;
 		margin-top: .75em;
 	}
 
-	#logout{
-		margin: .6em 1em 0;
-	}
 }
