--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ input, select {
 .limit {
   max-width: 40em;
   margin: auto;
-  padding: 1em;
+  padding: 0 1em;
 }
 
 /* line 6, ../sass/_rwd.scss */
@@ -510,28 +510,37 @@ input[type='text'].change {
 
 /* line 1, ../sass/_header.scss */
 header {
-  height: 3em;
+  height: 4em;
+  background: #EC5B0F;
 }
-/* line 4, ../sass/_header.scss */
+/* line 5, ../sass/_header.scss */
 header input {
   text-align: center;
 }
-/* line 8, ../sass/_header.scss */
-header #login-buttons {
+
+/* line 10, ../sass/_header.scss */
+#login-buttons {
+  margin: .9em  0 0 1em;
   display: inline-block;
   position: relative;
   border-radius: 5px;
   border: 1px solid #e6e6e6;
-  box-shadow: 6px 6px 7px #dadada;
 }
-/* line 15, ../sass/_header.scss */
-header .login-link-and-dropdown-list {
+
+/* line 17, ../sass/_header.scss */
+.login-link-text, .login-close-text {
+  cursor: pointer;
+}
+
+/* line 20, ../sass/_header.scss */
+.login-link-and-dropdown-list {
   position: relative;
   padding: .5em;
   background: #f0f0f0;
 }
-/* line 20, ../sass/_header.scss */
-header #login-dropdown-list {
+
+/* line 25, ../sass/_header.scss */
+#login-dropdown-list {
   position: absolute;
   top: -1px;
   left: -1px;
@@ -540,41 +549,51 @@ header #login-dropdown-list {
   background: #f0f0f0;
   border-radius: 5px;
   border: 1px solid #e6e6e6;
-  box-shadow: 6px 6px 7px #dadada;
   /*
   	center text like 'Sign in with Github'
   */
 }
-/* line 34, ../sass/_header.scss */
-header #login-dropdown-list .login-text-and-button {
+/* line 38, ../sass/_header.scss */
+#login-dropdown-list .login-text-and-button {
   text-align: center;
 }
-/* line 37, ../sass/_header.scss */
-header #login-dropdown-list span {
+/* line 41, ../sass/_header.scss */
+#login-dropdown-list span {
   margin-top: 7px;
   display: inline-block;
   cursor: pointer;
 }
-/* line 42, ../sass/_header.scss */
-header #login-dropdown-list span:hover {
+/* line 46, ../sass/_header.scss */
+#login-dropdown-list span:hover {
   color: #737373;
 }
-/* line 48, ../sass/_header.scss */
-header .user {
-  font-size: .8em;
-  margin: 1.4em 0 0 1em;
+
+/* line 52, ../sass/_header.scss */
+.user {
+  color: #F7F7F7;
+  font-size: .9em;
+  margin: 1.8em 0 0 1em;
   display: inline-block;
 }
-/* line 54, ../sass/_header.scss */
-header .or {
+
+/* line 59, ../sass/_header.scss */
+.or {
   margin: auto 1em;
 }
-/* line 58, ../sass/_header.scss */
-header #logout {
+
+/* line 63, ../sass/_header.scss */
+#logout {
   margin: .6em 1em 0;
 }
-/* line 62, ../sass/_header.scss */
-header #roomID {
+
+/* line 66, ../sass/_header.scss */
+#nickname {
+  max-width: 10em;
+  margin-top: .45em;
+}
+
+/* line 70, ../sass/_header.scss */
+#roomID {
   max-width: 7em;
   margin-top: .75em;
 }
