--- a/sass/_fields.scss
+++ b/sass/_fields.scss
@@ -1,7 +1,20 @@
 input[type='text']{
 	padding: .8em;
+
+	-webkit-transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	-ms-transition: all .3s ease-in-out;
+	-o-transition: all .3s ease-in-out;
+	transition: all .3s ease-in-out;
 	
 	&.change{
 		border: 2px solid transparent;
+		background:none;
+		color:white;
+
+		&:focus{
+			color:black;
+			background:white;
+		}
 	}
 }
