--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,9 +3,9 @@
 @import 'rwd';
 @import 'typography';
 @import 'transforms';
+@import 'welcome';
 @import 'messages';
 @import 'buttons';
 @import 'fields';
-@import 'header';
 @import 'icons';
 @import 'general';
