--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,15 @@ img {
   max-width: 100%;
 }
 
+/* line 1, ../sass/_typography.scss */
+body {
+  font: 90% / 1.3 sans-serif;
+  font-family: 'Questrial', sans-serif;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+}
+
 /*
 SUPER SLICK TRANSFORMS
 */
@@ -430,6 +439,137 @@ SUPER SLICK TRANSFORMS
   }
 }
 
+/* line 1, ../sass/_welcome.scss */
+.welcome-mast {
+  background: #3498db;
+  color: white;
+  text-align: center;
+  font-size: 2em;
+  position: relative;
+}
+
+/* line 8, ../sass/_welcome.scss */
+.welcome-mast-cont {
+  padding: 3em;
+  background: url("/images/opentalk_bg_opaque.png");
+  background: url("/images/pattern-white.png");
+  background-size: 400px;
+  -webkit-animation: welcome-mast-anim 20s infinite linear;
+  -moz-animation: welcome-mast-anim 20s infinite linear;
+  -o-animation: welcome-mast-anim 20s infinite linear;
+  animation: welcome-mast-anim 20s infinite linear;
+  -webkit-animation-fill-mode: both;
+  -moz-animation-fill-mode: both;
+  -o-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+/* line 22, ../sass/_welcome.scss */
+.welcome-mast-cont h1 {
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 400;
+}
+
+/* line 28, ../sass/_welcome.scss */
+#roomid {
+  position: relative;
+  padding: 1em;
+  margin: 0 1em;
+  text-align: center;
+  width: 8em;
+  outline: none;
+  border: 0px;
+  box-shadow: none;
+}
+
+/* line 41, ../sass/_welcome.scss */
+.blanket {
+  position: relative;
+  display: table;
+  background: white;
+  padding: 1.5em;
+  box-shadow: 3px 3px 25px lightgrey;
+  margin: 4em auto 6em;
+  border-radius: 5px;
+  border: 1px solid lightgrey;
+}
+@media all and (max-width: 40em) {
+  /* line 41, ../sass/_welcome.scss */
+  .blanket {
+    margin: 2.5em auto 4em;
+  }
+}
+
+/* line 56, ../sass/_welcome.scss */
+.medium-text {
+  font-size: 1.3em;
+}
+
+/* line 59, ../sass/_welcome.scss */
+.vam {
+  vertical-align: middle;
+  display: table-cell;
+}
+
+@-webkit-keyframes welcome-mast-anim {
+  /* line 66, ../sass/_welcome.scss */
+  0%,100% {
+    background-position: 0%;
+  }
+
+  /* line 67, ../sass/_welcome.scss */
+  50% {
+    background-position: 333px 333px;
+  }
+}
+
+@-moz-keyframes welcome-mast-anim {
+  /* line 70, ../sass/_welcome.scss */
+  0% {
+    background-position: 0%;
+  }
+
+  /* line 71, ../sass/_welcome.scss */
+  100% {
+    background-position: 333px 333px;
+  }
+}
+
+@-ms-keyframes welcome-mast-anim {
+  /* line 74, ../sass/_welcome.scss */
+  0% {
+    background-position: 0%;
+  }
+
+  /* line 75, ../sass/_welcome.scss */
+  100% {
+    background-position: 333px 333px;
+  }
+}
+
+@-o-keyframes welcome-mast-anim {
+  /* line 78, ../sass/_welcome.scss */
+  0% {
+    background-position: 0%;
+  }
+
+  /* line 79, ../sass/_welcome.scss */
+  100% {
+    background-position: 333px 333px;
+  }
+}
+
+@keyframes welcome-mast-anim {
+  /* line 82, ../sass/_welcome.scss */
+  0% {
+    background-position: 0%;
+  }
+
+  /* line 83, ../sass/_welcome.scss */
+  100% {
+    background-position: 333px 333px;
+  }
+}
+
 /* line 1, ../sass/_messages.scss */
 .messages {
   list-style-type: none;
@@ -522,102 +662,6 @@ input[type='text'].change:focus {
   background: white;
 }
 
-/* line 1, ../sass/_header.scss */
-header {
-  background: #EC5B0F;
-  padding: .5em;
-}
-/* line 5, ../sass/_header.scss */
-header input {
-  text-align: center;
-}
-
-/* line 10, ../sass/_header.scss */
-#login-buttons {
-  margin: .9em  0 0 1em;
-  display: inline-block;
-  position: relative;
-  border-radius: 5px;
-  border: 1px solid #e6e6e6;
-}
-
-/* line 17, ../sass/_header.scss */
-.login-link-text, .login-close-text {
-  cursor: pointer;
-}
-
-/* line 20, ../sass/_header.scss */
-.login-link-and-dropdown-list {
-  position: relative;
-  padding: .5em;
-  background: #f0f0f0;
-}
-
-/* line 25, ../sass/_header.scss */
-#login-dropdown-list {
-  position: absolute;
-  top: -1px;
-  left: -1px;
-  right: -100px;
-  padding: .5em;
-  background: #f0f0f0;
-  border-radius: 5px;
-  border: 1px solid #e6e6e6;
-  /*
-  	center text like 'Sign in with Github'
-  */
-}
-/* line 38, ../sass/_header.scss */
-#login-dropdown-list .login-text-and-button {
-  text-align: center;
-}
-/* line 41, ../sass/_header.scss */
-#login-dropdown-list span {
-  margin-top: 7px;
-  display: inline-block;
-  cursor: pointer;
-}
-/* line 46, ../sass/_header.scss */
-#login-dropdown-list span:hover {
-  color: #737373;
-}
-
-/* line 52, ../sass/_header.scss */
-.user {
-  color: #F7F7F7;
-  font-size: .9em;
-  margin: 1.8em 0 0 1em;
-  display: inline-block;
-}
-
-/* line 59, ../sass/_header.scss */
-.or {
-  margin: auto 1em;
-}
-
-/* line 63, ../sass/_header.scss */
-#logout {
-  margin: .6em .6em 0;
-}
-
-/* line 66, ../sass/_header.scss */
-#nickname {
-  max-width: 10em;
-  margin-top: .45em;
-}
-
-/* line 70, ../sass/_header.scss */
-#roomid {
-  /*
-  max-width: 7em;
-  */
-  /*
-  margin: 1.3em 0 0 1em;
-  */
-  margin: .5em auto .5em;
-  display: block;
-}
-
 /* line 1, ../sass/_icons.scss */
 [class^='icon'] {
   display: inline-block;
@@ -638,12 +682,25 @@ header input {
 }
 
 /* line 1, ../sass/_general.scss */
-.main {
-  position: relative;
-  overflow-x: hidden;
+.body-half {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 50%;
+  z-index: 0;
+  background: url("/images/opentalk_bg.png");
+  background: url("/images/pattern-black.png");
+  background-size: 800px;
 }
 
-/* line 7, ../sass/_general.scss */
+/* line 13, ../sass/_general.scss */
+.main {
+  z-index: 100;
+  @extends .limit;
+}
+
+/* line 21, ../sass/_general.scss */
 #online-users {
   max-width: 10em;
   min-width: 3em;
@@ -654,12 +711,12 @@ header input {
   list-style-type: none;
 }
 
-/* line 22, ../sass/_general.scss */
+/* line 36, ../sass/_general.scss */
 .usersCount {
   text-align: center;
 }
 
-/* line 25, ../sass/_general.scss */
+/* line 39, ../sass/_general.scss */
 .online {
   padding: 1px;
   text-overflow: ellipsis;
