--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -1,7 +1,21 @@
-.main{
-	position: relative;
-	overflow-x:hidden;
+.body-half{
+	position:fixed;
+	top:0;bottom:0;
+	left:0;
+	right:50%;
+	z-index: 0;
+	background: url('/images/opentalk_bg.png');
+	background:url('/images/pattern-black.png');
+
+	background-size: 800px;
 }
+
+.main{
+	z-index: 100;
+	@extends .limit;
+}
+
+
 
 
 #online-users{
