--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import 'typography';
 @import 'transforms';
 @import 'welcome';
+@import 'room';
 @import 'messages';
 @import 'buttons';
 @import 'fields';
