--- a/sass/_room.scss
+++ b/sass/_room.scss
@@ -1,34 +1,21 @@
 .fixed-sidebar{
 	position:fixed;
-	width:$limit*2/5;
+	
+	width:12em;
+
 	top:0;bottom:0;
-	//left:0;
+	//left:-100%;
 	background:grey;
 	z-index: 99;
-	
-	@media all and(max-width: $limit*3/2){
-		width:$limit/3;
-	}
 }
 .main{
 	z-index: 126;
-	margin-left:$limit*2/5;
-	width: $limit*3/5;
-
-	@media all and(max-width: $limit*3/2){
-		margin-left:$limit/3;
-	}
+	//margin-left:$limit*2/5;
+	margin: auto;
+	width: $limit;
+	padding: 1em;
+	background:lightgrey;
 }
-
-@media all and (max-width: $limit){
-	.fixed-sidebar{
-		left:-100%;
-	}
-	.main{
-		margin: auto;
-	}
-}
-
 
 #online-users{
 	padding: .66em;
@@ -45,11 +32,3 @@
 		text-overflow: ellipsis;
 		overflow: hidden;
 	}
-
-
-
-#nickname{
-	position:absolute;
-	top:40%;
-	left:40%;
-}
