--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -5,8 +5,8 @@
 	line-height: 1;
 	margin-top: 0;
 	padding: .6em 0.7em;
+	border-radius: 0.5em;
 }
-
 .silver{
 	background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #efefef), color-stop(1, #f7f7f7));
 	background: -webkit-linear-gradient(bottom, #efefef 0%, #f7f7f7 100%);
@@ -29,5 +29,3 @@
 		color: #444;
 	}
 }
-
-
