--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,6 +1,8 @@
 $limit:35em;
 $limit-extend:45em;
 
-$color-main:lighten(#95a5a6,10%);
+$color-main:lighten(#2980b9,10%);
+
+$color-secondary: #f1c40f;
 
 $transition-duration:.25s;
