--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import 'transforms';
 @import 'welcome';
 @import 'room';
+@import 'sidebar';
 @import 'messages';
 @import 'buttons';
 @import 'fields';
