--- a/sass/_welcome.scss
+++ b/sass/_welcome.scss
@@ -1,5 +1,5 @@
 .welcome-mast{
-	background:#3498db;
+	background:$color-main;
 	color:white;
 	text-align:center;
 	font-size: 2em;
@@ -20,7 +20,7 @@
 		animation-fill-mode: both;
 
 		h1{
-			font-family: 'Josefin Sans', sans-serif;
+			font-family: 'Raleway', sans-serif;
 			font-weight: 400;
 		}
 	}
@@ -29,7 +29,7 @@
 	position: relative;
 	padding: 1em;
 	//font-size: 1.3em;
-	margin: 0 1em;
+	//margin: 0 1em;
 	text-align: center;
 	width:8em;
 
